--- a/index.html
+++ b/index.html
@@ -1,33 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="container">
-    <nav class="navbar">
-        <div class="header-logo">LOGO</div>
+    <header>
+        <nav class="navbar">
+        <div class="logo">Logo</div>
         <div class="header-links">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
+            <ul>
+                <li><a href="$">About</a></li>
+                <li><a href="$">Store</a></li>
+                <li><a href="$">Contact</a></li>
+            </ul>
         </div>
     </nav>
-    <div class="bx hero">
-        <div class="hero-1 hero-cta">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast</p>
-            <button type="button">Sign Up</button>
+    <div class="hero">
+        <div class="left">
+            <h1 class="hero-header">This website is awesome</h1>
+            <p class="hero-text">This website has some subtext that goes here under the main title. It's a smaller
+                font and the
+                color is lower contrast.</p>
+            <button class="hero-signup">Sign Up</button>
+        </div>
+        <div class="right">
+            <img class="hero-image" src="images/container-photo.jpeg" alt="gintama">
+        </div>
     </div>
-    <div class="hero-1 hero-image">
-        <img src="images/shib.webp" alt="Placeholder">
+    </header>
+    <main>
+        <h2>Some random information.</h2>
+        <div class="card-container">
+            <div class="info">
+                <div class="square"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="square"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="square"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="square"></div>
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </main>
+    <div class="quote">
+        <em>You yourself have to change first, or nothing will change for you!</em>
+        <p>- Hideaki Sorachi</p>
     </div>
-</div>
-<div>
-<h1>Some Random Information</h1>
-</div>
+    <div class="end-signup">
+        <div class="signup-container">
+            <div class="signup-left">
+                <strong>Call to action! It's time!</strong>
+                <p class="secondary">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="signup-right">
+                <button class="secondary">Sign up</button>
+            </div>
+        </div>
+    </div>
+<footer>
+    Copyright &copy; The Odin Project 2021
+</footer>
 </body>
 </html>
